fixing too small font in diff UI

--- a/changedetectionio/static/styles/diff.scss
+++ b/changedetectionio/static/styles/diff.scss
@@ -4,7 +4,7 @@
     padding: 2em;
     margin: 1em;
     border-radius: 5px;
-    font-size: 9px;
+    font-size: 12px;
 
     table {
         table-layout: fixed;
